Tue Sep 28 16:20:48 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* doc/tutorial2/libxslt_pipes.*: New tutorial from Panagiotis Louridas
	* libxslt.spec.in doc/Makefile.am: integrated the tutorial in the
	  distribution

Sat Sep 25 21:38:57 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c libxslt/variables.c: fixed 2 leaks with
	  namespaced variable names.
	* tests/general/bug-154.*, tests/general/Makefile.am,
	  tests/docs/bug-154*, tests/docs/Makefile.am: added test case
	  for above

Fri Sep 24 18:13:45 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* Makefile.am: add missing variable
	* libxslt/transform.c: fixed some error callback data
	* tests/exslt/date/Makefile.am tests/exslt/date/sum*: added new
	  date:sum testing from Derek Poon

Fri Sep 24 09:17:22 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed problem with empty sets, etc.
	  (see discussion on mailing list)

Sat Sep 18 17:08:31 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed problem with timezone offset
	  (bug 153000)
	* tests/exslt/date/add.1.out: changed regression test output,
	  which was apparently incorrect for above case

Sat Sep 18 00:04:02 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: re-arranged sequence of setting up
	  namespaces within xsltCopyTree (see the list thread
	  http://mail.gnome.org/archives/xml/2004-September/msg00072.html)
	* tests/general/bug-104.out: slight change to expected output
	  due to above fix

Fri Sep 17 23:15:33 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: enhanced validation of date-time to catch
	  bit-field overflow (bug 152836)
	* tests/exslt/date/date.2.*, tests/exslt/time.2.*: added test
	  cases for above

Tue Sep  7 18:04:55 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/numbers.c: further refinement to UTF8 pattern
	  separator (bug 151975)

Tue Sep  7 00:14:12 PDT 2004 William Brack <wbrack@mmm.com.hk>
