@@ -1,3 +1,8 @@
+Wed Sep 29 15:42:33 CEST 2004 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/pattern.c: try to fix #153137 but without a test case
+	  it's shooting in the dark.
+
 Tue Sep 28 16:20:48 CEST 2004 Daniel Veillard <daniel@veillard.com>
 
 	* doc/tutorial2/libxslt_pipes.*: New tutorial from Panagiotis Louridas
